@@ -276,3 +276,4 @@ But we need the fix for issue #29 first.
 09/22/15-00:44:47: Working on issue #38: added pure lua Log manager.
 09/23/15-00:24:42: Added support for gui log sink. Added support for visual styles.
 09/23/15-09:32:26: Working on issue #38: added initial support to reload the lua MT5 control app.
+09/23/15-21:59:57: Working on issue #40: added support for image manager.
